package protobuf.message.messageProto;
option java_package = "protobuf.message.messageClass";
option java_outer_classname = "OutResRandomMapMessage";

message ResRandomMapMessage{
    required int32 mapNum=1;
    required int32 groupId=2;
}